NIFI-13719 allow Elasticsearch response to contain Long values for the took field
Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #9244.